--- a/.github/workflows/setup_dependencies.yml
+++ b/.github/workflows/setup_dependencies.yml
@@ -13,8 +13,7 @@ jobs:
   build:
     runs-on: ubuntu-20.04
     steps:
-    - uses: actions/checkout@v3
-      with:
+    - with:
         path: 'ros_ws/src/pycram'
         repository: cram2/pycram
       run: |
