--- a/.github/workflows/setup_dependencies.yml
+++ b/.github/workflows/setup_dependencies.yml
@@ -13,11 +13,13 @@ jobs:
   build:
     runs-on: ubuntu-20.04
     steps:
-    - with:
+    - uses: actions/checkout@v3
+      with:
         path: 'ros_ws/src/pycram'
         repository: cram2/pycram
+    - name: Install requirements
       run: |
-        cd ros_ws/src/pycram
+        cd $GITHUB_WORKSPACE/ros_ws/src/pycram
         sudo pip3 install -r requirements.txt
     - name: Checkout iai_maps
       uses: actions/checkout@v3
