--- a/.github/workflows/pycram-ci.yml
+++ b/.github/workflows/pycram-ci.yml
@@ -96,4 +96,4 @@ jobs:
         run: |
           roscd pycram
           # python3 -m unittest discover test
-          python3 test/test_bullet_world.py
+          python3 test/test_bullet_world_reasoning.py
