--- a/.github/workflows/pycram-ci.yml
+++ b/.github/workflows/pycram-ci.yml
@@ -95,5 +95,5 @@ jobs:
       - name: Run Tests
         run: |
           roscd pycram
-          # python3 -m unittest discover test
-          python3 test/test_action_designator.py
+          python3 -m unittest discover test
+          # python3 test/test_action_designator.py
