--- a/.github/workflows/pycram-ci.yml
+++ b/.github/workflows/pycram-ci.yml
@@ -95,19 +95,20 @@ jobs:
       - name: Run Tests
         run: |
           roscd pycram
+          cd test
           # python3 -m unittest discover -v test
-          python3 test/test_action_designator.py
-          python3 test/local_transformer_tests.py
-          python3 test/test_bullet_world.py
-          python3 test/test_bullet_world_reasoning.py
-          python3 test/test_costmaps.py
-          python3 test/test_database_resolver.py
-          python3 test/test_giskard.py
-          python3 test/test_jpt_resolver.py
-          python3 test/test_location_designator.py
-          python3 test/test_object_designator.py
-          python3 test/test_orm.py
-          python3 test/test_pose.py
-          python3 test/test_task_tree.py
+          python3 -m unittest -v test_action_designator
+          python3 -m unittest -v local_transformer_tests
+          python3 -m unittest -v test_bullet_world
+          python3 -m unittest -v test_bullet_world_reasoning
+          python3 -m unittest -v test_costmaps
+          python3 -m unittest -v test_database_resolver
+          python3 -m unittest -v test_giskard
+          python3 -m unittest -v test_jpt_resolver
+          python3 -m unittest -v test_location_designator
+          python3 -m unittest -v test_object_designator
+          python3 -m unittest -v test_orm
+          python3 -m unittest -v test_pose
+          python3 -m unittest -v test_task_tree
           
           # python3 test/test_action_designator.py
