--- a/.github/workflows/pycram-ci.yml
+++ b/.github/workflows/pycram-ci.yml
@@ -105,6 +105,7 @@ jobs:
           python3 -m unittest -v test_database_resolver
           python3 -m unittest -v test_giskard
           python3 -m unittest -v test_jpt_resolver
+          echo "test_location_designator"
           python3 -m unittest -v test_location_designator
           python3 -m unittest -v test_object_designator
           python3 -m unittest -v test_orm
