removed location desigs

--- a/.github/workflows/pycram-ci.yml
+++ b/.github/workflows/pycram-ci.yml
@@ -106,7 +106,7 @@ jobs:
           python3 -m unittest -v test_giskard
           python3 -m unittest -v test_jpt_resolver
           echo "test_location_designator"
-          python3 -m unittest -v test_location_designator
+          # python3 -m unittest -v test_location_designator
           python3 -m unittest -v test_object_designator
           python3 -m unittest -v test_orm
           python3 -m unittest -v test_pose
