--- a/.github/workflows/pycram-ci.yml
+++ b/.github/workflows/pycram-ci.yml
@@ -26,7 +26,7 @@ on:
         required: false
         type: boolean
 jobs:
-  build:
+  Build_and_run_Tests:
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v3
