try env variable

--- a/.github/workflows/pycram-ci.yml
+++ b/.github/workflows/pycram-ci.yml
@@ -94,7 +94,8 @@ jobs:
           sudo pip3 install pytest
       - name: print base_ref
         run : |
-          echo ${{ github.base_ref }}
+          echo $GITHUB_REPOSITORY
+          echo $GITHUB_REF_NAME
       - name: start roscore
         run: |
           roslaunch pycram ik_and_description.launch &
