--- a/.github/workflows/pycram-ci.yml
+++ b/.github/workflows/pycram-ci.yml
@@ -32,8 +32,8 @@ jobs:
       - uses: actions/checkout@v3
         with:
           path: 'ros_ws/src/pycram'
-          repository: ${{GITHUB_REPOSITORY}}
-          ref: ${{GITHUB_REF_NAME}}
+          repository: ${{github.repository}}
+          ref: ${{github.ref}}
           submodules: recursive
 
       - name: Checkout iai_maps
