--- a/.github/workflows/new-pycram-ci.yml
+++ b/.github/workflows/new-pycram-ci.yml
@@ -8,6 +8,7 @@ on:
     branches:
       - dev
       - master
+      - test-ci-mv-error
   pull_request:
     branches:
       - master
@@ -44,7 +45,7 @@ jobs:
           rm -rf /opt/ros/overlay_ws/src/pycram/* 
           cd /opt/ros/overlay_ws/src/pycram
           rm -rf .git .github .gitignore .gitmodules .readthedocs.yaml
-          mv /__w/${{ github.event.repository.name }}/${{ github.event.repository.name }}/ros/src/pycram /opt/ros/overlay_ws/src
+          cp -r /__w/${{ github.event.repository.name }}/${{ github.event.repository.name }}/ros/src/pycram /opt/ros/overlay_ws/src
 
       - name: Remake workspace & start roscore
         run: |
