[ci] Another fix for setuptools

--- a/.github/workflows/reusable-sphinx-build.yml
+++ b/.github/workflows/reusable-sphinx-build.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - dev
+      - fix-ci
   pull_request:
     branches:
       - master
@@ -25,6 +26,11 @@ jobs:
 
       - name: Checkout 🛎
         uses: actions/checkout@v3
+
+      - name: Install PyCRAM dependencies 🍼
+        uses: py-actions/py-dependency-install@v4
+        with:
+          path: "requirements-setuptools.txt"
 
       # ----------------------------------------------------------------------------------------------------------------
 
