--- a/.github/workflows/notebook-test-ci.yml
+++ b/.github/workflows/notebook-test-ci.yml
@@ -81,4 +81,4 @@ jobs:
           
           source /opt/ros/overlay_ws/devel/setup.bash 
           roscd pycram/examples/tmp
-          treon --thread 1 -v
+          treon --thread 1 -v --exclude=migrate_neems.ipynb
