[ci] First test of new docker image ci

--- a/.github/workflows/update-docker-image.yml
+++ b/.github/workflows/update-docker-image.yml
@@ -4,8 +4,9 @@ on:
     branches:
       - master
       - dev
-    paths:
-      - 'requirements.txt' 
+      - test-ci
+    #paths:
+    #  - 'requirements.txt'
 # only run when a commit has changes in the requirements.txt file
 
 jobs:
@@ -26,6 +27,6 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v5
         with:
-          context: ./docker
+          context: ./docker/ros2
           push: true
-          tags: ${{ vars.DOCKER_IMAGE }}
+          tags: ros-jazzy
