--- a/.github/workflows/update-docker-image.yml
+++ b/.github/workflows/update-docker-image.yml
@@ -29,4 +29,4 @@ jobs:
         with:
           context: ./docker/ros2
           push: true
-          tags: ros-jazzy
+          tags: pycram/pycram:jazzy
