[ci] Updated test ci

--- a/.github/workflows/new-pycram-ci.yml
+++ b/.github/workflows/new-pycram-ci.yml
@@ -8,6 +8,7 @@ on:
     branches:
       - dev
       - master
+      - new-cis
   pull_request:
     branches:
       - master
@@ -22,9 +23,9 @@ on:
 
 jobs:
   build_and_run_tests:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-24.04
     container:
-      image: "pycram/pycram:dev"
+      image: "pycram/pycram:jazzy"
     steps:
       - name: Checkout PyCRAM
         uses: actions/checkout@v3
