--- a/.github/workflows/update-docker-image.yml
+++ b/.github/workflows/update-docker-image.yml
@@ -4,9 +4,8 @@ on:
     branches:
       - master
       - dev
-      - new-cis
-    #paths:
-    #  - 'requirements.txt'
+    paths:
+      - 'requirements.txt'
 # only run when a commit has changes in the requirements.txt file
 
 jobs:
