[ci] Source of venv

--- a/.github/workflows/new-pycram-ci.yml
+++ b/.github/workflows/new-pycram-ci.yml
@@ -55,24 +55,24 @@ jobs:
           colcon build --symlink-install
           source /opt/ros/overlay_ws/install/setup.bash 
 
-      - name: Install python dependencies
+      - name: Install python dependencies, PyTest and pyjpt
         run: |
           cd /opt/ros/overlay_ws/src/pycram
+          source pycram-venv/bin/activate
           pip install -r requirements.txt
           pip install -r requirements-resolver.txt
-
-      - name: Install pytest & pyjpt
-        run: |
           pip install --ignore-installed pytest pyjpt
 
       - name: Run tests
         run: | 
           source /opt/ros/overlay_ws/install/setup.bash 
           cd /opt/ros/overlay_ws/src/pycram
+          source pycram-venv/bin/activate
           pytest -v test
 
       - name: Run Demos
         run: | 
           source /opt/ros/overlay_ws/install/setup.bash 
           cd /opt/ros/overlay_ws/src/pycram
+          source pycram-venv/bin/activate
           python3 demos/pycram_bullet_world_demo/test_demo.py
