--- a/.github/workflows/new-pycram-ci.yml
+++ b/.github/workflows/new-pycram-ci.yml
@@ -58,6 +58,8 @@ jobs:
       - name: Install python dependencies, PyTest and pyjpt
         run: |
           cd /opt/ros/overlay_ws/src/pycram
+          ls .
+          ls pycram
           source pycram-venv/bin/activate
           pip install -r requirements.txt
           pip install -r requirements-resolver.txt
