--- a/requirements.txt
+++ b/requirements.txt
@@ -17,7 +17,7 @@ pynput~=1.7.7
 # playsound
 # pydub~=0.25.1
 # gTTS~=2.5.3
-dm_control
+dm_control # MJCF
 trimesh==4.6.0
 deprecated
 probabilistic_model>=6.0.2
@@ -32,4 +32,6 @@ transforms3d
 python-box
 urdf_parser_py
 networkx
+bs4 # ProcThor
+
 
