--- a/.github/workflows/new-pycram-ci.yml
+++ b/.github/workflows/new-pycram-ci.yml
@@ -51,6 +51,7 @@ jobs:
         run: |
           cd /opt/ros/overlay_ws/src/pycram
           source ../pycram-venv/bin/activate
+          pip install -U sqlalchemy
           pip install -r requirements.txt
           pip install --ignore-installed pytest
 
