--- a/.github/workflows/update-docker-image.yml
+++ b/.github/workflows/update-docker-image.yml
@@ -4,7 +4,7 @@ on:
     branches:
       - master
       - dev
-      - new-cis
+#      - new-cis
 #    paths:
 #      - 'requirements.txt'
 # only run when a commit has changes in the requirements.txt file
